# api/openapi/openapi.json
@@ -39,7 +39,9 @@
 		        "$ref": "#/components/responses/error"
 		      }
 		    }
-		  },
+		  }
+		},
+		"/order": {
 		  "post": {
 		    "description": "Creates a new order.",
 		    "requestBody": {
